--- a/index.html
+++ b/index.html
@@ -2,22 +2,93 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
-
 </head>
 
 <body>
     <div class="container">
-        <div class="item">
-            <img src="img/bru1.jpg" alt="beach" />
+        <div class="item title">
+            A opiniated list of movies you should see before you die.
         </div>
         <div class="item">
-            <img src="img/bru1.jpg" alt="beach" />
+            <img src="img/taxi-driver.jpg" alt="movie" />
         </div>
         <div class="item">
-            <img src="img/bru1.jpg" alt="beach" />
+            <img src="img/the-shining.jpg" alt="movie" />
         </div>
         <div class="item">
-            <img src="img/bru1.jpg" alt="beach" />
+            <img src="img/alien_1.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/apocalypse_now.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/blade_runner.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/brazil.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/eraserhead.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/exotica.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/requiem_for_a_dream.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/reservoir_dogs.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/2001_a_space_oddyssey.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/the_good_the_bad_the_ugly.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/bagdad_cafe.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/barry_lyndon.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/blue_velvet.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/dead_man.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/fear_and_loathing_in_las_vegas.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/full_metal_jacket.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/monthy_python_and_the_holy_grail.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/requiem_for_a_dream.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/scarface.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/the_big_lebowski.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/the_doom_generation.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/the_rocky_horror_picture_show.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/the_texas_chainsaw_massacre.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/the_thing.jpg" alt="movie" />
+        </div>
+        <div class="item">
+            <img src="img/evil_dead.jpg" alt="movie" />
         </div>
     </div>
 </body>
