--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;600&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
     <div class="container">
         <div class="item title">
-            A opiniated list of movies you should see before you die.
+            A <span class="medium"> opiniated </span> list of 
+            <span class="large"> movies </span> to 
+            <span class="medium"> watch </span>before you 
+            <span class="medium"> die. </span>
         </div>
         <div class="item">
             <img src="img/taxi-driver.jpg" alt="movie" />
