--- a/index.html
+++ b/index.html
@@ -2,90 +2,281 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;600&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
     <div class="container">
-        <div class="item title">
-            A <span class="medium"> opiniated </span> list of 
-            <span class="large"> movies </span> to 
-            <span class="medium"> watch </span>before you 
-            <span class="medium"> die. </span>
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/taxi-driver.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/the-shining.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/alien_1.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/apocalypse_now.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/blade_runner.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/brazil.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/eraserhead.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/requiem_for_a_dream.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/reservoir_dogs.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/2001_a_space_oddyssey.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/the_good_the_bad_the_ugly.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/bagdad_cafe.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/barry_lyndon.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/blue_velvet.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/dead_man.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
-        <div class="item">
-            <img src="img/fear_and_loathing_in_las_vegas.jpg" alt="movie" />
-        </div>
-        <div class="item">
-            <img src="img/full_metal_jacket.jpg" alt="movie" />
-        </div>
-        <div class="item">
-            <img src="img/monthy_python_and_the_holy_grail.jpg" alt="movie" />
-        </div>
-        <div class="item">
-            <img src="img/scarface.jpg" alt="movie" />
-        </div>
-        <div class="item">
-            <img src="img/the_big_lebowski.jpg" alt="movie" />
-        </div>
-        <div class="item">
-            <img src="img/the_rocky_horror_picture_show.jpg" alt="movie" />
-        </div>
-        <div class="item">
-            <img src="img/the_texas_chainsaw_massacre.jpg" alt="movie" />
-        </div>
-        <div class="item">
-            <img src="img/the_thing.jpg" alt="movie" />
-        </div>
-        <div class="item">
-            <img src="img/evil_dead.jpg" alt="movie" />
+        <div class="movie">
+            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Taxi Driver</h2>
+                    <p class="movie__year">1974</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+            </div>
         </div>
     </div>
 </body>
