--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <body>
     <div class="container">
         <div class="movie">
+            <h1 class="underline">TWYBD</h1>
+            An <h2> opinionated </h2>list of <h2> movies</h2> to <h2>watch </h2>before you <h1>die</h1>
+        </div>
+        <div class="movie">
             <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
             <div class="movie__informations">
                 <div class="movie__header">
@@ -19,7 +23,25 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
+            </div>
+        </div>
+        <div class="movie">
+            <img class="movie_img" src="img/jaws.jpg" alt="movie" />
+            <div class="movie__informations">
+                <div class="movie__header">
+                    <h2 class="movie__title">Jaws</h2>
+                    <p class="movie__year">1982</p>
+                </div>
+                <div class="movie__details">
+                    <ul>
+                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                        <li><span class="movie__tag">Adventure - Horror</span></li>
+                    </ul>
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -35,7 +57,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -51,7 +74,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -67,7 +91,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -83,7 +108,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -99,7 +125,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -115,7 +142,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -131,7 +159,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -147,7 +176,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -163,7 +193,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -179,7 +210,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -195,7 +227,8 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                </div>
             </div>
         </div>
         <div class="movie">
@@ -211,74 +244,62 @@
                         <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
                         <li><span class="movie__tag">Adventure - Horror</span></li>
                     </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
+                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
                 </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
             </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
+            </div>
+            <div class="movie">
+                <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+                <div class="movie__informations">
+                    <div class="movie__header">
+                        <h2 class="movie__title">Taxi Driver</h2>
+                        <p class="movie__year">1974</p>
+                    </div>
+                    <div class="movie__details">
+                        <ul>
+                            <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                            <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                            <li><span class="movie__tag">Adventure - Horror</span></li>
+                        </ul>
+                        <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    </div>
                 </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
             </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
+            <div class="movie">
+                <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+                <div class="movie__informations">
+                    <div class="movie__header">
+                        <h2 class="movie__title">Taxi Driver</h2>
+                        <p class="movie__year">1974</p>
+                    </div>
+                    <div class="movie__details">
+                        <ul>
+                            <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                            <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                            <li><span class="movie__tag">Adventure - Horror</span></li>
+                        </ul>
+                        <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    </div>
                 </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
             </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
+            <div class="movie">
+                <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
+                <div class="movie__informations">
+                    <div class="movie__header">
+                        <h2 class="movie__title">Taxi Driver</h2>
+                        <p class="movie__year">1974</p>
+                    </div>
+                    <div class="movie__details">
+                        <ul>
+                            <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
+                            <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
+                            <li><span class="movie__tag">Adventure - Horror</span></li>
+                        </ul>
+                        <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
+                    </div>
                 </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
             </div>
         </div>
-    </div>
 </body>
 
 </html>
