--- a/index.html
+++ b/index.html
@@ -2,304 +2,21 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/mustache@latest"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="movie">
-            <h1 class="underline">TWYBD</h1>
-            An <h2> opinionated </h2>list of <h2> movies</h2> to <h2>watch </h2>before you <h1>die</h1>
+    <div id="target" class="container">
+        <div class="movie begin">
+            <h1 class="underline">TWBYD</h1>
+            An <h2> opinionated </h2>list of <h1> movies</h1> to <h2>watch </h2>before you <h1>die</h1>
         </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
+        <div class="movie end">
+            <h1 class="underline">TO BE CONTINUED</h1>
         </div>
-        <div class="movie">
-            <img class="movie_img" src="img/jaws.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Jaws</h2>
-                    <p class="movie__year">1982</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="movie">
-            <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-            <div class="movie__informations">
-                <div class="movie__header">
-                    <h2 class="movie__title">Taxi Driver</h2>
-                    <p class="movie__year">1974</p>
-                </div>
-                <div class="movie__details">
-                    <ul>
-                        <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                        <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                        <li><span class="movie__tag">Adventure - Horror</span></li>
-                    </ul>
-                    <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                </div>
-            </div>
-            </div>
-            <div class="movie">
-                <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-                <div class="movie__informations">
-                    <div class="movie__header">
-                        <h2 class="movie__title">Taxi Driver</h2>
-                        <p class="movie__year">1974</p>
-                    </div>
-                    <div class="movie__details">
-                        <ul>
-                            <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                            <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                            <li><span class="movie__tag">Adventure - Horror</span></li>
-                        </ul>
-                        <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                    </div>
-                </div>
-            </div>
-            <div class="movie">
-                <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-                <div class="movie__informations">
-                    <div class="movie__header">
-                        <h2 class="movie__title">Taxi Driver</h2>
-                        <p class="movie__year">1974</p>
-                    </div>
-                    <div class="movie__details">
-                        <ul>
-                            <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                            <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                            <li><span class="movie__tag">Adventure - Horror</span></li>
-                        </ul>
-                        <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                    </div>
-                </div>
-            </div>
-            <div class="movie">
-                <img class="movie_img" src="img/taxi-driver.jpg" alt="movie" />
-                <div class="movie__informations">
-                    <div class="movie__header">
-                        <h2 class="movie__title">Taxi Driver</h2>
-                        <p class="movie__year">1974</p>
-                    </div>
-                    <div class="movie__details">
-                        <ul>
-                            <li>Running Time <span class="movie__running"> 1h23 <span></span> </li>
-                            <li>Directed by <span class="movie__director">Steven Spielbergh</span></li>
-                            <li><span class="movie__tag">Adventure - Horror</span></li>
-                        </ul>
-                        <!-- <p class="movie__synopsis">Taxi driver meets wood cutter in the parc for fun stuff to happen.</p> -->
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
 </body>
 
 </html>
