css cleanup removing not useful flex container

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/mustache@latest"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="main.js"></script>
 </head>
 
@@ -15,28 +16,41 @@
                 <div class="bottom">movies <span class="small">to</span></div>
             </div>
             <div class="title">
-            <div class="row">
-                <p class="letter">w</p>
-                <p class="w follow">atch</p>
+                <div class="row">
+                    <p class="letter">w</p>
+                    <p class="w follow">atch</p>
+                </div>
+                <div class="row">
+                    <p class="letter">b</p>
+                    <p class="b follow">efore</p>
+                </div>
+                <div class="row">
+                    <p class="letter">y</p>
+                    <p class="y follow">ou</p>
+                </div>
+                <div class="row">
+                    <p class="letter">d</p>
+                    <p class="follow">ie</p>
+                </div>
             </div>
-            <div class="row">
-                <p class="letter">b</p>
-                <p class="b follow">efore</p>
-            </div>
-            <div class="row">
-                <p class="letter">y</p>
-                <p class="y follow">ou</p>
-            </div>
-            <div class="row">
-                <p class="letter">d</p>
-                <p class="follow">ie</p>
-            </div>
-    </div>
             <div class="about">ab out.</div>
+        </div>
+    <div class="movie end">
+            <div class="title">
+                <div class="row">
+                    <p class="letter">T</p>
+                    <p class="w follow">o</p>
+                </div>
+                <div class="row">
+                    <p class="letter">B</p>
+                    <p class="b follow">e</p>
+                </div>
+                <div class="row square">
+                    <p class="letter">C</p>
+                    <p class="y follow">ontinued</p>
+                </div>
             </div>
     </div>
-    <div class="movie end">
-        <h1 class="underline">TO BE CONTINUED</h1>
     </div>
     </div>
 </body>
