using grid for the hero section

--- a/index.html
+++ b/index.html
@@ -9,48 +9,28 @@
 </head>
 
 <body>
-    <div id="target" class="container">
-        <div class="movie begin">
-            <div class="pres">
-                <div class="top">An <span class="small">opinionated</span> list <span clas="small">of</span> </div>
-                <div class="bottom">movies <span class="small">to</span></div>
-            </div>
-            <div class="title">
-                <div class="row">
-                    <p class="letter">w</p>
-                    <p class="w follow">atch</p>
-                </div>
-                <div class="row">
-                    <p class="letter">b</p>
-                    <p class="b follow">efore</p>
-                </div>
-                <div class="row">
-                    <p class="letter">y</p>
-                    <p class="y follow">ou</p>
-                </div>
-                <div class="row">
-                    <p class="letter">d</p>
-                    <p class="follow">ie</p>
-                </div>
-            </div>
+    <div class="container">
+        <div id="target" class="hero">
+            <div class="intro1">An <span class="small">opinionated</span> list <span clas="small">of</span> </div>
+            <div class="intro2">movies <span class="small">to</span></div>
+            <p class="letter">w</p>
+            <p class="follow">atch</p>
+            <p class="letter">b</p>
+            <p class="follow">efore</p>
+            <p class="letter">y</p>
+            <p class="follow">ou</p>
+            <p class="letter">d</p>
+            <p class="follow">ie</p>
             <div class="about">ab out.</div>
         </div>
-    <div class="movie end">
-            <div class="title">
-                <div class="row">
-                    <p class="letter">T</p>
-                    <p class="w follow">o</p>
-                </div>
-                <div class="row">
-                    <p class="letter">B</p>
-                    <p class="b follow">e</p>
-                </div>
-                <div class="row square">
-                    <p class="letter">C</p>
-                    <p class="y follow">ontinued</p>
-                </div>
-            </div>
-    </div>
+        <div class="end">
+                <p class="letter">T</p>
+                <p class="follow">o</p>
+                <p class="letter">B</p>
+                <p class="follow">e</p>
+                <p class="letter">C</p>
+                <p class="follow">ontinued</p>
+        </div>
     </div>
     </div>
 </body>
