wip for about link and hover on cards

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <div id="target" class="hero">
+        <div class="hero">
             <p class="letter">w</p>
             <p class="follow">atch</p>
             <p class="letter">b</p>
@@ -19,7 +19,11 @@
             <p class="follow">ou</p>
             <p class="letter">d</p>
             <p class="follow">ie</p>
-            <div class="about">ab out.</div>
+            <a href="#" class="about_info_link">ab out.</a>
+        </div>
+        <div id="target" class="about hide">
+                This is my very own list of opiniated movies you <span class="bold">should </span>watch before you die. It  
+            <a href="#" class="about_hero_link">ab out.</a>
         </div>
         <div class="end">
                 <p class="letter">T</p>
