renaming main.css to style.css

--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <html>
-
-<head>
-    <link rel="stylesheet" href="main.css">
+  <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/mustache@latest"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="hero">
-            <p class="letter">w</p>
-            <p class="follow">atch</p>
-            <p class="letter">b</p>
-            <p class="follow">efore</p>
-            <p class="letter">y</p>
-            <p class="follow">ou</p>
-            <p class="letter">d</p>
-            <p class="follow">ie</p>
-            <a href="#" class="about_info_link">ab out.</a>
-        </div>
-        <div id="target" class="about hide">
-                This is my very own list of opiniated movies you <span class="bold">should </span>watch before you die. It  
-            <a href="#" class="about_hero_link">ab out.</a>
-        </div>
-        <div class="end">
-                <p class="letter">T</p>
-                <p class="follow">o</p>
-                <p class="letter">B</p>
-                <p class="follow">e</p>
-                <p class="letter">C</p>
-                <p class="follow">ontinued</p>
-        </div>
+      <div class="hero">
+        <p class="letter">w</p>
+        <p class="follow">atch</p>
+        <p class="letter">b</p>
+        <p class="follow">efore</p>
+        <p class="letter">y</p>
+        <p class="follow">ou</p>
+        <p class="letter">d</p>
+        <p class="follow">ie</p>
+        <a href="#" class="about_info_link">ab out.</a>
+      </div>
+      <div id="target" class="about hide">
+        This is my very own list of opiniated movies you
+        <span class="bold">should </span>watch before you die. It
+        <a href="#" class="about_hero_link">ab out.</a>
+      </div>
+      <div class="end">
+        <p class="letter">T</p>
+        <p class="follow">o</p>
+        <p class="letter">B</p>
+        <p class="follow">e</p>
+        <p class="letter">C</p>
+        <p class="follow">ontinued</p>
+      </div>
     </div>
-    </div>
-</body>
-
+  </body>
 </html>
