mobile navigation is ok with 50%

--- a/index.html
+++ b/index.html
@@ -9,31 +9,32 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="hero">
-        <p class="letter">w</p>
-        <p class="follow">atch</p>
-        <p class="letter">b</p>
-        <p class="follow">efore</p>
-        <p class="letter">y</p>
-        <p class="follow">ou</p>
-        <p class="letter">d</p>
-        <p class="follow">ie</p>
-        <a href="#" class="about_info_link">ab out.</a>
-      </div>
-      <div id="target" class="about hide">
-        This is my very own list of opiniated movies you
-        <span class="bold">should </span>watch before you die. It
-        <a href="#" class="about_hero_link">ab out.</a>
-      </div>
-      <div class="end">
-        <p class="letter">T</p>
-        <p class="follow">o</p>
-        <p class="letter">B</p>
-        <p class="follow">e</p>
-        <p class="letter">C</p>
-        <p class="follow">ontinued</p>
-      </div>
-    </div>
+    <main>
+        <header class="card header container" id="target">
+          <div class="hero">
+            <p class="main_letter">w</p>
+            <p class="sub_letter">atch</p>
+            <p class="main_letter">b</p>
+            <p class="sub_letter">efore</p>
+            <p class="main_letter">y</p>
+            <p class="sub_letter">ou</p>
+            <p class="main_letter">d</p>
+            <p class="sub_letter">ie</p>
+            <a href="#" class="link about_link">ab out.</a>
+          </div>
+          <div class="about hide_card">
+            This opiniated movies you <span class="bold">should </span>
+            <a href="#" class="link hero_link">ab out.</a>
+          </div>
+        </header>
+        <div class="end">
+          <p class="main_letter">T</p>
+          <p class="sub_letter">o</p>
+          <p class="main_letter">B</p>
+          <p class="sub_letter">e</p>
+          <p class="main_letter">C</p>
+          <p class="sub_letter">ontinued</p>
+        </div>
+    </main>
   </body>
 </html>
