--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#" class="link hero_link">ab out.</a>
           </div>
         </header>
-        <div class="end">
+        <div class="card footer container">
           <p class="main_letter">T</p>
           <p class="sub_letter">o</p>
           <p class="main_letter">B</p>
