--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <main>
-        <header class="card header container" id="target">
+        <header class="card header" id="target">
           <div class="hero">
             <p class="main_letter">w</p>
             <p class="sub_letter">atch</p>
@@ -27,7 +27,7 @@
             <a href="#" class="link hero_link">ab out.</a>
           </div>
         </header>
-        <div class="card footer container">
+        <div class="card footer">
           <p class="main_letter">T</p>
           <p class="sub_letter">o</p>
           <p class="main_letter">B</p>
