changing size and testing

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <p class="sub_letter">ou</p>
             <p class="main_letter">d</p>
             <p class="sub_letter">ie</p>
-            <a href="#" class="link about_link">ab out.</a>
+            <a href="#" class="link about_link">Info.</a>
           </div>
           <div class="about hide_card">
             This opiniated movies you <span class="bold">should </span>
-            <a href="#" class="link hero_link">ab out.</a>
+            <a href="#" class="link hero_link">Info.</a>
           </div>
         </header>
         <div class="card footer">
