--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <a href="#" class="link about_link">Info.</a>
           </div>
           <div class="about hide_card">
-            This opiniated movies you <span class="bold">should </span>
+          <p>
+            This is my very own personal and opinionated </span> list of favorite movies. <span class="im">I don't pretend that those are the best movies ever made </span> but those are the ones that brought me a perspective that I didn't know about life, relations, or any other topic that matters to me. You are the movies that you watch, don't waste your time watching stuff from which you don't learn anything. </p>
+          <p> Made with love by </p>
             <a href="#" class="link hero_link">Info.</a>
           </div>
         </header>
