changing text and adding heart img

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           </div>
           <div class="about hide_card">
           <p>
-            This is my very own personal and opinionated </span> list of favorite movies. <span class="im">I don't pretend that those are the best movies ever made </span> but those are the ones that brought me a perspective that I didn't know about life, relations, or any other topic that matters to me. You are the movies that you watch, don't waste your time watching stuff from which you don't learn anything. </p>
-          <p> Made with love by </p>
+            This is my very own personal and opinionated </span> list of favorite movies. <span class="im">I don't pretend that those are the best movies ever made </span> but those are the ones that brought me a perspective that I didn't know about life, relations, or any other topic that matters to me. </p>
+          <p> Made with <img src="img/heart.png" class="heart"> by <a href="mailto@ngermeau@icloud.com">me</a> </p>
             <a href="#" class="link hero_link">Info.</a>
           </div>
         </header>
