unsetting snapping on desktop, aligning icons on info text, cleaning up the readme

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           </div>
           <div class="about hide_card">
           <p>
-            This is my very own personal and opinionated </span> list of favorite movies. <span class="im">I don't pretend that those are the best movies ever made </span> but those are the ones that brought me a perspective that I didn't know about life, relations, or any other topic that matters to me. </p>
-          <p> Made with <img src="img/heart.png" class="heart"> by <a href="mailto@ngermeau@icloud.com">me</a> </p>
+            This is my personal and opinionated </span> list of favorite movies. <span class="im">For any complaints, please go to hell.</span> If you feel that we share the same kind of taste and think of any worthwhile addition to this list, please feel free to contact <a href="mailto@ngermeau@icloud.com">me</a>.</p>
+          <p> Made with <img src="img/heart.png" class="heart"> on <a href="https://github.com/ngermeau/twbyd" target="_blank" rel="noreferrer noopener"><img src="img/github.png" class="github"> </a></p>
             <a href="#" class="link hero_link">Info.</a>
           </div>
         </header>
