compressed icons img and correcting movie case sensitive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="about hide_card">
           <p>
             This is my personal and opinionated </span> list of favorite movies. <span class="im">For any complaints, please go to hell.</span> If you feel that we share the same kind of taste and think of any worthwhile addition to this list, please feel free to contact <a href="mailto@ngermeau@icloud.com">me</a>.</p>
-          <p> Made with <img src="img/heart.png" class="heart"> on <a href="https://github.com/ngermeau/twbyd" target="_blank" rel="noreferrer noopener"><img src="img/github.png" class="github"> </a></p>
+          <p> Made with <img src="assets/icons/heart.png" class="heart"> on <a href="https://github.com/ngermeau/twbyd" target="_blank" rel="noreferrer noopener"><img src="assets/icons/github.png" class="github"> </a></p>
             <a href="#" class="link hero_link">Info.</a>
           </div>
         </header>
