--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@ Made Easy - Statcounter"
         <div class="about hide_card">
           <p>
             This is my personal and opinionated list of favorite movies.
-            <span class="im">For any complaints, please go to hell.</span> If
-            you feel that we share the same kind of taste and think of any
+            If you feel that we share the same kind of taste and think of any
             worthwhile addition to this list, please feel free to contact
             <a href="mailto@state_pigtail0u@icloud.com">me</a>.
           </p>
