changing the info content

--- a/index.html
+++ b/index.html
@@ -1,82 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://unpkg.com/mustache@latest"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/main.js"></script>
-    <!-- Default Statcounter code for wbyd staging
-https://seashell-app-s8a8l.ondigitalocean.app/ -->
-    <script type="text/javascript">
-      var sc_project = 12823319;
-      var sc_invisible = 1;
-      var sc_security = "209a5895";
-    </script>
-    <script
-      type="text/javascript"
-      src="https://www.statcounter.com/counter/counter.js"
-      async
-    ></script>
-    <noscript
-      ><div class="statcounter">
-        <a
-          title="Web Analytics
-Made Easy - Statcounter"
-          href="https://statcounter.com/"
-          target="_blank"
-          ><img
-            class="statcounter"
-            src="https://c.statcounter.com/12823319/0/209a5895/1/"
-            alt="Web Analytics Made Easy - Statcounter"
-            referrerpolicy="no-referrer-when-downgrade"
-        /></a></div
-    ></noscript>
-    <!-- End of Statcounter Code -->
-  </head>
 
-  <body>
-    <main>
-      <header class="card header" id="target">
-        <div class="hero">
-          <p class="main_letter">w</p>
-          <p class="sub_letter">atch</p>
-          <p class="main_letter">b</p>
-          <p class="sub_letter">efore</p>
-          <p class="main_letter">y</p>
-          <p class="sub_letter">ou</p>
-          <p class="main_letter">d</p>
-          <p class="sub_letter">ie</p>
-          <a href="#" class="link about_link">Info.</a>
-        </div>
-        <div class="about hide_card">
-          <p>
-            This is my personal and opinionated list of favorite movies.
-            If you feel that we share the same kind of taste and think of any
-            worthwhile addition to this list, please feel free to contact
-            <a href="mailto@state_pigtail0u@icloud.com">me</a>.
-          </p>
-          <p>
-            Made with <img src="assets/icons/heart.png" class="heart" /> on
-            <a
-              href="https://github.com/ngermeau/twbyd"
-              target="_blank"
-              rel="noreferrer noopener"
-              ><img src="assets/icons/github.png" class="github" />
-            </a>
-          </p>
-          <a href="#" class="link hero_link">Info.</a>
-        </div>
-      </header>
-      <div class="card footer">
-        <p class="main_letter">T</p>
-        <p class="sub_letter">o</p>
-        <p class="main_letter">B</p>
-        <p class="sub_letter">e</p>
-        <p class="main_letter">C</p>
-        <p class="sub_letter">ontinued</p>
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://unpkg.com/mustache@latest"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script src="assets/js/main.js"></script>
+  <!-- Default Statcounter code for wbyd staging
+https://seashell-app-s8a8l.ondigitalocean.app/ -->
+  <script type="text/javascript">
+    var sc_project = 12823319;
+    var sc_invisible = 1;
+    var sc_security = "209a5895";
+  </script>
+  <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+  <noscript>
+    <div class="statcounter">
+      <a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/" target="_blank"><img class="statcounter"
+          src="https://c.statcounter.com/12823319/0/209a5895/1/" alt="Web Analytics Made Easy - Statcounter"
+          referrerpolicy="no-referrer-when-downgrade" /></a>
+    </div>
+  </noscript>
+  <!-- End of Statcounter Code -->
+</head>
+
+<body>
+  <main>
+    <header class="card header" id="target">
+      <div class="hero">
+        <p class="main_letter">w</p>
+        <p class="sub_letter">atch</p>
+        <p class="main_letter">b</p>
+        <p class="sub_letter">efore</p>
+        <p class="main_letter">y</p>
+        <p class="sub_letter">ou</p>
+        <p class="main_letter">d</p>
+        <p class="sub_letter">ie</p>
+        <a href="#" class="link about_link">Info.</a>
       </div>
-    </main>
-  </body>
+      <div class="about hide_card">
+        <p>
+          This is my personal and opinionated list of favorite movies.
+          If you feel that we share the same kind of taste and think of any
+          worthwhile addition to this list, please feel free to <a
+            href="https://github.com/ngermeau/watch_before_you_die/issues/new">submit an issue</a>
+
+        </p>
+        <p>
+          Made with <img src="assets/icons/heart.png" class="heart" /> on
+          <a href="https://github.com/ngermeau/twbyd" target="_blank" rel="noreferrer noopener"><img
+              src="assets/icons/github.png" class="github" />
+          </a>
+        </p>
+        <a href="#" class="link hero_link">Info.</a>
+      </div>
+    </header>
+    <div class="card footer">
+      <p class="main_letter">T</p>
+      <p class="sub_letter">o</p>
+      <p class="main_letter">B</p>
+      <p class="sub_letter">e</p>
+      <p class="main_letter">C</p>
+      <p class="sub_letter">ontinued</p>
+    </div>
+  </main>
+</body>
+
 </html>
