--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@ Made Easy - Statcounter" href="https://statcounter.com/" target="_blank"><img cl
           This is my personal and opinionated list of favorite movies.
           If you feel that we share the same kind of taste and think of any
           worthwhile addition to this list, please feel free to <a
-            href="https://github.com/ngermeau/watch_before_you_die/issues/new">submit an issue</a>
-
+            href="https://github.com/ngermeau/watch_before_you_die/issues/new">send a request.</a>
         </p>
         <p>
           Made with <img src="assets/icons/heart.png" class="heart" /> on
