changing title and adding alt for images

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Made Easy - Statcounter" href="https://statcounter.com/" target="_blank"><img cl
     </div>
   </noscript>
   <!-- End of Statcounter Code -->
+  <title>Watch Before You Die</title>
 </head>
 
 <body>
