--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@ Made Easy - Statcounter" href="https://statcounter.com/" target="_blank"><img cl
       </div>
       <div class="about hide_card">
         <p>
-          This is my personal and opinionated list of favorite movies.
-          If you feel that we share the same kind of taste and think of any
-          worthwhile addition to this list, please feel free to <a
+          After couple of requests from friends asking advices on movies to watch, I've decided to create <span
+            class="im">Watch
+            Before You Die</span> to share the collection of my all time favorite movies. If you feel that we share the
+          same kind of taste and think of any worthwhile addition to this list, please feel free to <a
             href="https://github.com/ngermeau/watch_before_you_die/issues/new">send a request.</a>
         </p>
         <p>
